--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
               <div>
                 <h3 class="info__title">Phone</h3>
-                <span class="info__subtitle">0935 - 616 - 267</span>
+                <span class="info__subtitle">0935-616-267</span>
               </div>
             </div>
 
@@ -155,7 +155,7 @@
       </section>
 
       <section class="qualification section">
-        <h2 data-heading="My Journey" class="section__title">Qualification</h2>
+        <h2 data-heading="My Journey" class="section__title">I Studied At</h2>
         <div class="qualification__container container grid">
           <div class="Education">
             <h3 class="qualification__title">
@@ -216,6 +216,94 @@
                 <p class="timeline__text">Lead / Senior Guest</p>
                 <span class="timeline__date"> 2018 - present </span>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="work section" id="achivement">
+        <h2 data-heading="My Journey" class="section__title">Achivement</h2>
+
+        <div class="work__filters">
+          <span class="work__item active-work">All</span>
+        </div>
+
+        <div class="work__container container grid">
+          <div class="work__card">
+            <img src="/img/giai3hsgtp.jpg" alt="" class="work__img" />
+            <h3 class="work__title"></h3>
+            <a href="#popup" class="work__button">
+              Demo
+              <i class="uil uil-arrow-right work__button-icon"></i>
+            </a>
+
+            <div class="portfolio__item-details">
+              <h3 class="details__title"></h3>
+              <p class="details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+                expedita.
+              </p>
+
+              <ul class="details__info">
+                <li>Creat - <span>4 dec 2020</span></li>
+                <li>Tech - <span>html css</span></li>
+                <li>Role - <span>fronted</span></li>
+                <li>
+                  View - <span><a href=""></a></span>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__card">
+            <img src="/img/giai3hsgtp.jpg" alt="" class="work__img" />
+            <h3 class="work__title"></h3>
+            <span class="work__button"
+              >Demo
+              <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+
+            <div class="portfolio__item-details">
+              <h3 class="details__title"></h3>
+              <p class="details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+                expedita.
+              </p>
+
+              <ul class="details__info">
+                <li>Creat - <span>4 dec 2020</span></li>
+                <li>Tech - <span>html css</span></li>
+                <li>Role - <span>fronted</span></li>
+                <li>
+                  View - <span><a href=""></a></span>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__card">
+            <img src="/img/igoircp.jpg" alt="" class="work__img" />
+            <h3 class="work__title"></h3>
+            <span class="work__button"
+              >Demo
+              <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+
+            <div class="portfolio__item-details">
+              <h3 class="details__title"></h3>
+              <p class="details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+                expedita.
+              </p>
+
+              <ul class="details__info">
+                <li>Creat - <span>4 dec 2020</span></li>
+                <li>Tech - <span>html css</span></li>
+                <li>Role - <span>fronted</span></li>
+                <li>
+                  View - <span><a href=""></a></span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
